--- a/home.html
+++ b/home.html
@@ -9,13 +9,19 @@
     <title>Home</title>
   </head>
   <body>
-  
-  <div class="row">
-    <div class="col-md-6">
-      asd
+  <div class="container">
+    <div class="row">
+      <nav>
+        
+      </nav>
     </div>
-    <div class="col-md-6">
-      asd
+    <div class="row">
+      <div class="col-md-6">
+        asd
+      </div>
+      <div class="col-md-6">
+        asd
+      </div>
     </div>
 
   </div>
