first nav copy from laravel

--- a/home.html
+++ b/home.html
@@ -10,10 +10,8 @@
   </head>
   <body>
   <div class="container">
-    <div class="row">
-      <nav>
-        
-      </nav>
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Laravel Blog</a>
     </div>
     <div class="row">
       <div class="col-md-6">
