weird testing for nav

--- a/home.html
+++ b/home.html
@@ -10,9 +10,31 @@
   </head>
   <body>
   <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Laravel Blog</a>
-    </div>
+    <nav>
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Laravel Blog</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/">Home</a></li>
+            <li class=""><a href="/blog">Blog</a></li>
+            <li class=""><a href="/about">About</a></li>
+            <li class=""><a href="/contact">Contact</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+              <li>
+                <a href="/login">Log In</a>
+              </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
+
     <div class="row">
       <div class="col-md-6">
         asd
