--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
             <li class=""><a href="/blog">Blog</a></li>
@@ -33,7 +33,6 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-
 
     <div class="row">
       <div class="col-md-6">
