--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
 
@@ -10,29 +11,32 @@
   </head>
   <body>
   <div class="container">
-    <nav>
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Laravel Blog</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
-            <li class=""><a href="/blog">Blog</a></li>
-            <li class=""><a href="/about">About</a></li>
-            <li class=""><a href="/contact">Contact</a></li>
+    <div class="row row1">
+      <div class="col-3">
+        <img src="logo.png" width="40" height="40">
+      </div>
+      <div class="col-5 nav">
+        <nav>
+          <ul class="nav justify-content-center">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">CURSOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">EVENTOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">CONTACTO</a>
+            </li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
-              <li>
-                <a href="/login">Log In</a>
-              </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+        </nav>
+      </div>
+      <div class="col-4">
+        <button type="button" class="btn btn-success">Iniciar sesión</button>
+      </div>
+    </div>
 
     <div class="row">
       <div class="col-md-6">
