only missing round image

--- a/home.html
+++ b/home.html
@@ -10,44 +10,43 @@
     <title>Home</title>
   </head>
   <body>
-  <div class="container">
-    <div class="row row1">
-      <div class="col-3">
-        <img src="logo.png" width="40" height="40">
+    <div class="block">
+
+      <div class="row row1">
+        <div class="col-4">
+          <img src="logo.png" width="29" height="61" class="logo">
+        </div>
+        <div class="col-4 nav">
+          <nav>
+            <ul class="nav justify-content-center">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">HOME</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">CURSOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">EVENTOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">CONTACTO</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="col-4">
+          <button type="button" class="btn btn-success">Iniciar sesión</button>
+          <button type="button" class="btn btn-outline-light">Crear cuenta</button>
+        </div>
       </div>
-      <div class="col-5 nav">
-        <nav>
-          <ul class="nav justify-content-center">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">HOME</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">CURSOS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">EVENTOS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">CONTACTO</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-      <div class="col-4">
-        <button type="button" class="btn btn-success">Iniciar sesión</button>
+      <div class="row row2">
+        <div class="col-8 offset-2">
+          <p class="title">Transformamos tu mindset  y desarrollamos tu talento digital</p>
+          <p class="subtitle">Toma el control de tu futuro en un click</p>
+        </div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-6">
-        asd
-      </div>
-      <div class="col-md-6">
-        asd
-      </div>
-    </div>
-
-  </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
