another block completed

--- a/home.html
+++ b/home.html
@@ -46,6 +46,43 @@
         </div>
       </div>
     </div>
+    <div class="row row3">
+      <div class="col-1 offset-5">
+        <button type="button" class="btn flecha"> <img src="flecha.png"> </button>
+      </div>
+    </div>
+    <div class="row row4">
+      <div class="col-6 offset-3">
+        <p class="p1">Academias de aprendizaje según donde quieres crecer</p>
+      </div>
+    </div>
+    <div class="row row5">
+      <div class="col-6 offset-3">
+        <p class="p2">Re-inventamos la educación y te ofrecemos curso que te ayudaran en el reskilling & upskilling</p>
+      </div>
+    </div>
+    <div class="row row6">
+      <div class="col-2 offset-2">
+        <button type="button" class="btn btn-outline-success outline">Todas las academias</button>
+      </div>
+      <div class="col-2">
+        <button type="button" class="btn btn-outline-secondary outline">Academia de Agilidad</button>
+      </div>
+      <div class="col-2">
+        <button type="button" class="btn btn-outline-secondary outline">Academia de Experiencia</button>
+      </div>
+      <div class="col-2">
+        <button type="button" class="btn btn-outline-secondary outline">Academia de Data</button>
+      </div>
+    </div>
+    <div class="row row7">
+      <div class="col-2 offset-4">
+        <button type="button" class="btn btn-outline-secondary outline">Academia de Tecnología</button>
+      </div>
+      <div class="col-2">
+        <button type="button" class="btn btn-outline-secondary outline">Academia de Negocio</button>
+      </div>
+    </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
