--- a/home.html
+++ b/home.html
@@ -83,7 +83,175 @@
         <button type="button" class="btn btn-outline-secondary outline">Academia de Negocio</button>
       </div>
     </div>
-
+    <div class="row row8">
+      <div class="col-2 offset-2">
+        <div class="container c1">
+          <div class="row"><img src="people.png" width="200" height="135"> </div>
+          <div class="row"><p class="p3">Transformacion digital</p></div>
+          <div class="row"><p class="p4">Introducción a las Metodologías Ágiles </p> </div>
+          <div class="row">
+            <div class="col-2">
+              <img src="lilpersons.png">
+            </div>
+            <div class="col-4">
+              <p class="p5">345 alumnos</p>
+            </div>
+            <div class="col-5 offset-1">
+              <img src="star.png">
+              <a class="p5">4,8</a>
+            </div>
+          </div>
+          <div class="row p"><button type="button" class="btn btn-primary buy"><img src="shopcart.png"> S/150.00</button></div>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="container c2">
+          <div class="row"><img src="people.png" width="200" height="135"> </div>
+          <div class="row"><p class="p3">Transformacion digital</p></div>
+          <div class="row"><p class="p4">Introducción a las Metodologías Ágiles </p> </div>
+          <div class="row">
+            <div class="col-2">
+              <img src="lilpersons.png">
+            </div>
+            <div class="col-4">
+              <p class="p5">345 alumnos</p>
+            </div>
+            <div class="col-5 offset-1">
+              <img src="star.png">
+              <a class="p5">4,8</a>
+            </div>
+          </div>
+          <div class="row p"><button type="button" class="btn btn-primary buy"><img src="shopcart.png"> Gratis</button></div>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="container c3">
+          <div class="row"><img src="people.png" width="200" height="135"> </div>
+          <div class="row"><p class="p3">Transformacion digital</p></div>
+          <div class="row"><p class="p4">Introducción a las Metodologías Ágiles </p> </div>
+          <div class="row">
+            <div class="col-2">
+              <img src="lilpersons.png">
+            </div>
+            <div class="col-4">
+              <p class="p5">345 alumnos</p>
+            </div>
+            <div class="col-5 offset-1">
+              <img src="star.png">
+              <a class="p5">4,8</a>
+            </div>
+          </div>
+          <div class="row p"><button type="button" class="btn btn-primary buy"><img src="shopcart.png"> S/150.00</button></div>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="container c4">
+          <div class="row"><img src="people.png" width="200" height="135"> </div>
+          <div class="row"><p class="p3">Transformacion digital</p></div>
+          <div class="row"><p class="p4">Introducción a las Metodologías Ágiles </p> </div>
+          <div class="row">
+            <div class="col-2">
+              <img src="lilpersons.png">
+            </div>
+            <div class="col-4">
+              <p class="p5">345 alumnos</p>
+            </div>
+            <div class="col-5 offset-1">
+              <img src="star.png">
+              <a class="p5">4,8</a>
+            </div>
+          </div>
+          <div class="row p"><button type="button" class="btn btn-primary buy"><img src="shopcart.png"> S/150.00</button></div>
+        </div>
+      </div>
+    </div>
+    <div class="row row9">
+      <div class="col-2 offset-2">
+        <div class="container c1">
+          <div class="row"><img src="people.png" width="200" height="135"> </div>
+          <div class="row"><p class="p3">Transformacion digital</p></div>
+          <div class="row"><p class="p4">Introducción a las Metodologías Ágiles </p> </div>
+          <div class="row">
+            <div class="col-2">
+              <img src="lilpersons.png">
+            </div>
+            <div class="col-4">
+              <p class="p5">345 alumnos</p>
+            </div>
+            <div class="col-5 offset-1">
+              <img src="star.png">
+              <a class="p5">4,8</a>
+            </div>
+          </div>
+          <div class="row p"><button type="button" class="btn btn-primary buy"><img src="shopcart.png"> S/150.00</button></div>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="container c2">
+          <div class="row"><img src="people.png" width="200" height="135"> </div>
+          <div class="row"><p class="p3">Transformacion digital</p></div>
+          <div class="row"><p class="p4">Introducción a las Metodologías Ágiles </p> </div>
+          <div class="row">
+            <div class="col-2">
+              <img src="lilpersons.png">
+            </div>
+            <div class="col-4">
+              <p class="p5">345 alumnos</p>
+            </div>
+            <div class="col-5 offset-1">
+              <img src="star.png">
+              <a class="p5">4,8</a>
+            </div>
+          </div>
+          <div class="row p"><button type="button" class="btn btn-primary buy"><img src="shopcart.png"> Gratis</button></div>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="container c3">
+          <div class="row"><img src="people.png" width="200" height="135"> </div>
+          <div class="row"><p class="p3">Transformacion digital</p></div>
+          <div class="row"><p class="p4">Introducción a las Metodologías Ágiles </p> </div>
+          <div class="row">
+            <div class="col-2">
+              <img src="lilpersons.png">
+            </div>
+            <div class="col-4">
+              <p class="p5">345 alumnos</p>
+            </div>
+            <div class="col-5 offset-1">
+              <img src="star.png">
+              <a class="p5">4,8</a>
+            </div>
+          </div>
+          <div class="row p"><button type="button" class="btn btn-primary buy"><img src="shopcart.png"> Gratis</button></div>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="container c4">
+          <div class="row"><img src="people.png" width="200" height="135"> </div>
+          <div class="row"><p class="p3">Transformacion digital</p></div>
+          <div class="row"><p class="p4">Introducción a las Metodologías Ágiles </p> </div>
+          <div class="row">
+            <div class="col-2">
+              <img src="lilpersons.png">
+            </div>
+            <div class="col-4">
+              <p class="p5">345 alumnos</p>
+            </div>
+            <div class="col-5 offset-1">
+              <img src="star.png">
+              <a class="p5">4,8</a>
+            </div>
+          </div>
+          <div class="row p"><button type="button" class="btn btn-primary buy"><img src="shopcart.png"> S/150.00</button></div>
+        </div>
+      </div>
+    </div>
+    <div class="row row10">
+      <div class="col-2 offset-5">
+        <button type="button" class="btn btn-success cursos">Ver todos los cursos</button>
+      </div>
+    </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
