got basic structure with spans

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <title>Home</title>
   </head>
   <body>
-    <div class="block">
+    <div class="block1">
 
       <div class="row row1">
         <div class="col-4">
@@ -250,6 +250,26 @@
     <div class="row row10">
       <div class="col-2 offset-5">
         <button type="button" class="btn btn-success cursos">Ver todos los cursos</button>
+      </div>
+    </div>
+    <div class="block2">
+      <div class="row row11">
+        <div class="col-4 offset-4">
+          <p class="p6">Tipos de entrenamiento</p>
+        </div>
+      </div>
+      <div class="row row12">
+        <div class="col-5 offset-3">
+          <p class="p7">Re-inventamos la educación y te ofrecemos cursos que te ayudaran en el reskilling & upskilling.</p>
+        </div>
+      </div>
+      <div class="row row13">
+        <div class="container">
+          <span class="t1">A</span>
+          <span class="t2">A</span>
+          <span class="t3">A</span>
+          <span class="t4">A</span>
+        </div>
       </div>
     </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
