--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
   <body>
     <div class="block1">
 
-      <div class="row row1">
+      <div class="row row-1">
         <div class="col-4">
           <img src="logo.png" width="29" height="61" class="logo">
         </div>
@@ -39,29 +39,29 @@
           <button type="button" class="btn btn-outline-light">Crear cuenta</button>
         </div>
       </div>
-      <div class="row row2">
+      <div class="row row-2">
         <div class="col-8 offset-2">
           <p class="title">Transformamos tu mindset  y desarrollamos tu talento digital</p>
           <p class="subtitle">Toma el control de tu futuro en un click</p>
         </div>
       </div>
     </div>
-    <div class="row row3">
+    <div class="row row-3">
       <div class="col-1 offset-5">
         <button type="button" class="btn flecha"> <img src="flecha.png"> </button>
       </div>
     </div>
-    <div class="row row4">
+    <div class="row row-4">
       <div class="col-6 offset-3">
         <p class="p1">Academias de aprendizaje según donde quieres crecer</p>
       </div>
     </div>
-    <div class="row row5">
+    <div class="row row-5">
       <div class="col-6 offset-3">
         <p class="p2">Re-inventamos la educación y te ofrecemos curso que te ayudaran en el reskilling & upskilling</p>
       </div>
     </div>
-    <div class="row row6">
+    <div class="row row-6">
       <div class="col-2 offset-2">
         <button type="button" class="btn btn-outline-success outline">Todas las academias</button>
       </div>
@@ -75,7 +75,7 @@
         <button type="button" class="btn btn-outline-secondary outline">Academia de Data</button>
       </div>
     </div>
-    <div class="row row7">
+    <div class="row row-7">
       <div class="col-2 offset-4">
         <button type="button" class="btn btn-outline-secondary outline">Academia de Tecnología</button>
       </div>
@@ -83,7 +83,7 @@
         <button type="button" class="btn btn-outline-secondary outline">Academia de Negocio</button>
       </div>
     </div>
-    <div class="row row8">
+    <div class="row row-8">
       <div class="col-2 offset-2">
         <div class="container c1">
           <div class="row"><img src="people.png" width="200" height="135"> </div>
@@ -165,7 +165,7 @@
         </div>
       </div>
     </div>
-    <div class="row row9">
+    <div class="row row-9">
       <div class="col-2 offset-2">
         <div class="container c1">
           <div class="row"><img src="people.png" width="200" height="135"> </div>
@@ -247,31 +247,98 @@
         </div>
       </div>
     </div>
-    <div class="row row10">
+    <div class="row row-10">
       <div class="col-2 offset-5">
         <button type="button" class="btn btn-success cursos">Ver todos los cursos</button>
       </div>
     </div>
     <div class="block2">
-      <div class="row row11">
+      <div class="row row-11">
         <div class="col-4 offset-4">
           <p class="p6">Tipos de entrenamiento</p>
         </div>
       </div>
-      <div class="row row12">
+      <div class="row row-12">
         <div class="col-5 offset-3">
           <p class="p7">Re-inventamos la educación y te ofrecemos cursos que te ayudaran en el reskilling & upskilling.</p>
         </div>
       </div>
-      <div class="row row13">
-        <div class="container">
-          <span class="t1">A</span>
-          <span class="t2">A</span>
-          <span class="t3">A</span>
-          <span class="t4">A</span>
+      <div class="row row-13">
+        <div class="col-3 c-13-1">
+          <div class="row row13-1">
+            <div class="col-6">
+              <p class="p8-1">01</p>
+            </div>
+            <div class="col-6">
+              <div class="row">
+                <img src="aprendizajeOnline.png">
+              </div>
+              <div class="row">
+                <p class="p8-2">Aprendizaje<br> Online</p>
+              </div>
+              <div class="row">
+                <p class="p8-3">Re-inventamos la educación y te ofrecemos cursos que te ayudaran.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-3 c-13-2">
+          <div class="row row13-2">
+            <div class="col-6">
+              <p class="p8-1">02</p>
+            </div>
+            <div class="col-6">
+              <div class="row">
+                <img src="workshopsBootcamps.png">
+              </div>
+              <div class="row">
+                <p class="p8-2">Workshops y Bootcamps</p>
+              </div>
+              <div class="row">
+                <p class="p8-3">Re-inventamos la educación y te ofrecemos cursos que te ayudaran.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-3 c-13-3">
+          <div class="row row13-3">
+            <div class="col-6">
+              <p class="p8-1">03</p>
+            </div>
+            <div class="col-6">
+              <div class="row">
+                <img src="coachingMentoring.png">
+              </div>
+              <div class="row">
+                <p class="p8-2">Coaching y Mentoring</p>
+              </div>
+              <div class="row">
+                <p class="p8-3">Re-inventamos la educación y te ofrecemos cursos que te ayudaran.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-3 c-13-4">
+          <div class="row row13-4">
+            <div class="col-6">
+              <p class="p8-1">04</p>
+            </div>
+            <div class="col-6">
+              <div class="row">
+                <img src="upskillAssesment.png">
+              </div>
+              <div class="row">
+                <p class="p8-2">Upskill<br> Assesment</p>
+              </div>
+              <div class="row">
+                <p class="p8-3">Re-inventamos la educación y te ofrecemos cursos que te ayudaran.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+    
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
