--- a/home.html
+++ b/home.html
@@ -6,17 +6,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
     <title>Home</title>
   </head>
   <body>
     <div class="block1">
-
       <div class="row row-1">
-        <div class="col-4">
+        <div class="col-md-4" >
           <img src="logo.png" width="29" height="61" class="logo">
         </div>
-        <div class="col-4 nav">
+        <div class="col-md-4 nav">
           <nav>
             <ul class="nav justify-content-center">
               <li class="nav-item">
@@ -34,25 +33,25 @@
             </ul>
           </nav>
         </div>
-        <div class="col-4">
+        <div class="col-md-4">
           <button type="button" class="btn btn-success">Iniciar sesión</button>
           <button type="button" class="btn btn-outline-light">Crear cuenta</button>
         </div>
       </div>
       <div class="row row-2">
-        <div class="col-8 offset-2">
+        <div class="col-md-8 offset-2">
           <p class="p-2-1">Transformamos tu mindset  y desarrollamos tu talento digital</p>
           <p class="p-2-2">Toma el control de tu futuro en un click</p>
         </div>
       </div>
     </div>
     <div class="row row-3">
-      <div class="col-1 offset-5">
+      <div class="col-md-1 offset-5">
         <button type="button" class="btn flecha"> <img src="flecha.png"> </button>
       </div>
     </div>
     <div class="row row-4">
-      <div class="col-6 offset-3">
+      <div class="col-md-6 offset-3">
         <div class="row text">
           <p class="p-4-1">Academias de aprendizaje según donde quieres crecer</p>
         </div>
@@ -62,41 +61,41 @@
       </div>
     </div>
     <div class="row row-5">
-      <div class="col-2 offset-2">
+      <div class="col-md-2 offset-2">
         <button type="button" class="btn btn-outline-success outline">Todas las academias</button>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <button type="button" class="btn btn-outline-secondary outline">Academia de Agilidad</button>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <button type="button" class="btn btn-outline-secondary outline">Academia de Experiencia</button>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <button type="button" class="btn btn-outline-secondary outline">Academia de Data</button>
       </div>
     </div>
     <div class="row row-6">
-      <div class="col-2 offset-4">
+      <div class="col-md-2 offset-4">
         <button type="button" class="btn btn-outline-secondary outline">Academia de Tecnología</button>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <button type="button" class="btn btn-outline-secondary outline">Academia de Negocio</button>
       </div>
     </div>
     <div class="row row-7">
-      <div class="col-2 offset-2">
+      <div class="col-md-2 offset-2">
         <div class="container c-7-1">
           <div class="row"><img src="people.png" width="200" height="135"> </div>
           <div class="row"><p class="p-7-1">Transformacion digital</p></div>
           <div class="row"><p class="p-7-2">Introducción a las Metodologías Ágiles</p> </div>
           <div class="row">
-            <div class="col-2">
+            <div class="col-md-2">
               <img src="lilpersons.png">
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <p class="p-7-3">345 alumnos</p>
             </div>
-            <div class="col-5 offset-1">
+            <div class="col-md-5 offset-1">
               <img src="star.png">
               <a class="p-7-3">4,8</a>
             </div>
@@ -104,19 +103,19 @@
           <div class="row p"><button type="button" class="btn btn-primary buy"><img src="shopcart.png"> S/150.00</button></div>
         </div>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <div class="container c2">
           <div class="row"><img src="people.png" width="200" height="135"> </div>
           <div class="row"><p class="p-7-1">Transformacion digital</p></div>
           <div class="row"><p class="p-7-2">Introducción a las Metodologías Ágiles </p> </div>
           <div class="row">
-            <div class="col-2">
+            <div class="col-md-2">
               <img src="lilpersons.png">
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <p class="p-7-3">345 alumnos</p>
             </div>
-            <div class="col-5 offset-1">
+            <div class="col-md-5 offset-1">
               <img src="star.png">
               <a class="p-7-3">4,8</a>
             </div>
@@ -124,19 +123,19 @@
           <div class="row p"><button type="button" class="btn btn-primary buy"><img src="shopcart.png"> Gratis</button></div>
         </div>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <div class="container c3">
           <div class="row"><img src="people.png" width="200" height="135"> </div>
           <div class="row"><p class="p-7-1">Transformacion digital</p></div>
           <div class="row"><p class="p-7-2">Introducción a las Metodologías Ágiles </p> </div>
           <div class="row">
-            <div class="col-2">
+            <div class="col-md-2">
               <img src="lilpersons.png">
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <p class="p-7-3">345 alumnos</p>
             </div>
-            <div class="col-5 offset-1">
+            <div class="col-md-5 offset-1">
               <img src="star.png">
               <a class="p-7-3">4,8</a>
             </div>
@@ -144,19 +143,19 @@
           <div class="row p"><button type="button" class="btn btn-primary buy"><img src="shopcart.png"> S/150.00</button></div>
         </div>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <div class="container c4">
           <div class="row"><img src="people.png" width="200" height="135"> </div>
           <div class="row"><p class="p-7-1">Transformacion digital</p></div>
           <div class="row"><p class="p-7-2">Introducción a las Metodologías Ágiles </p> </div>
           <div class="row">
-            <div class="col-2">
+            <div class="col-md-2">
               <img src="lilpersons.png">
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <p class="p-7-3">345 alumnos</p>
             </div>
-            <div class="col-5 offset-1">
+            <div class="col-md-5 offset-1">
               <img src="star.png">
               <a class="p-7-3">4,8</a>
             </div>
@@ -166,19 +165,19 @@
       </div>
     </div>
     <div class="row row-8">
-      <div class="col-2 offset-2">
+      <div class="col-md-2 offset-2">
         <div class="container c1">
           <div class="row"><img src="people.png" width="200" height="135"> </div>
           <div class="row"><p class="p-8-1">Transformacion digital</p></div>
           <div class="row"><p class="p-8-2">Introducción a las Metodologías Ágiles </p> </div>
           <div class="row">
-            <div class="col-2">
+            <div class="col-md-2">
               <img src="lilpersons.png">
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <p class="p-8-3">345 alumnos</p>
             </div>
-            <div class="col-5 offset-1">
+            <div class="col-md-5 offset-1">
               <img src="star.png">
               <a class="p-8-3">4,8</a>
             </div>
@@ -186,19 +185,19 @@
           <div class="row p"><button type="button" class="btn btn-primary buy"><img src="shopcart.png"> S/150.00</button></div>
         </div>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <div class="container c2">
           <div class="row"><img src="people.png" width="200" height="135"> </div>
           <div class="row"><p class="p-8-1">Transformacion digital</p></div>
           <div class="row"><p class="p-8-2">Introducción a las Metodologías Ágiles </p> </div>
           <div class="row">
-            <div class="col-2">
+            <div class="col-md-2">
               <img src="lilpersons.png">
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <p class="p-8-3">345 alumnos</p>
             </div>
-            <div class="col-5 offset-1">
+            <div class="col-md-5 offset-1">
               <img src="star.png">
               <a class="p-8-3">4,8</a>
             </div>
@@ -206,19 +205,19 @@
           <div class="row p"><button type="button" class="btn btn-primary buy"><img src="shopcart.png"> Gratis</button></div>
         </div>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <div class="container c3">
           <div class="row"><img src="people.png" width="200" height="135"> </div>
           <div class="row"><p class="p-8-1">Transformacion digital</p></div>
           <div class="row"><p class="p-8-2">Introducción a las Metodologías Ágiles </p> </div>
           <div class="row">
-            <div class="col-2">
+            <div class="col-md-2">
               <img src="lilpersons.png">
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <p class="p-8-3">345 alumnos</p>
             </div>
-            <div class="col-5 offset-1">
+            <div class="col-md-5 offset-1">
               <img src="star.png">
               <a class="p-8-3">4,8</a>
             </div>
@@ -226,19 +225,19 @@
           <div class="row p"><button type="button" class="btn btn-primary buy"><img src="shopcart.png"> Gratis</button></div>
         </div>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <div class="container c4">
           <div class="row"><img src="people.png" width="200" height="135"> </div>
           <div class="row"><p class="p-8-1">Transformacion digital</p></div>
           <div class="row"><p class="p-8-2">Introducción a las Metodologías Ágiles </p> </div>
           <div class="row">
-            <div class="col-2">
+            <div class="col-md-2">
               <img src="lilpersons.png">
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <p class="p-8-3">345 alumnos</p>
             </div>
-            <div class="col-5 offset-1">
+            <div class="col-md-5 offset-1">
               <img src="star.png">
               <a class="p-8-3">4,8</a>
             </div>
@@ -248,7 +247,7 @@
       </div>
     </div>
     <div class="row row-9">
-      <div class="col-2 offset-5">
+      <div class="col-md-2 offset-5">
         <div class="row text">
           <button type="button" class="btn btn-success cursos">Ver todos los cursos</button>
         </div>
@@ -256,7 +255,7 @@
     </div>
     <div class="block2">
       <div class="row row-10">
-        <div class="col-6 offset-3">
+        <div class="col-md-6 offset-3">
           <div class="row text">
             <p class="p-10-1">Tipos de entrenamiento</p>
           </div>
@@ -266,12 +265,12 @@
         </div>
       </div>
       <div class="row row-11">
-        <div class="col-3 c-11-1">
+        <div class="col-md-3 c-11-1">
           <div class="row row-11-1">
-            <div class="col-6">
+            <div class="col-md-6">
               <p class="p-11-1">01</p>
             </div>
-            <div class="col-6">
+            <div class="col-md-6">
               <div class="row">
                 <img src="aprendizajeOnline.png">
               </div>
@@ -284,12 +283,12 @@
             </div>
           </div>
         </div>
-        <div class="col-3 c-11-2">
+        <div class="col-md-3 c-11-2">
           <div class="row row-11-2">
-            <div class="col-6">
+            <div class="col-md-6">
               <p class="p-11-1">02</p>
             </div>
-            <div class="col-6">
+            <div class="col-md-6">
               <div class="row">
                 <img src="workshopsBootcamps.png">
               </div>
@@ -302,12 +301,12 @@
             </div>
           </div>
         </div>
-        <div class="col-3 c-11-3">
+        <div class="col-md-3 c-11-3">
           <div class="row row-11-3">
-            <div class="col-6">
+            <div class="col-md-6">
               <p class="p-11-1">03</p>
             </div>
-            <div class="col-6">
+            <div class="col-md-6">
               <div class="row">
                 <img src="coachingMentoring.png">
               </div>
@@ -320,12 +319,12 @@
             </div>
           </div>
         </div>
-        <div class="col-3 c-11-4">
+        <div class="col-md-3 c-11-4">
           <div class="row row-11-4">
-            <div class="col-6">
+            <div class="col-md-6">
               <p class="p-11-1">04</p>
             </div>
-            <div class="col-6">
+            <div class="col-md-6">
               <div class="row">
                 <img src="upskillAssesment.png">
               </div>
@@ -341,7 +340,7 @@
       </div>
     </div>
     <div class="row row-12">
-      <div class="col-6 offset-3">
+      <div class="col-md-6 offset-3">
         <div class="row text">
           <p class="p-12-1">Nuestros Mentores</p>
         </div>
@@ -351,7 +350,7 @@
       </div>
     </div>
     <div class="row row-13">
-      <div class="col-2 offset-1">
+      <div class="col-md-2 offset-1">
         <div class="container c-13-1 text">
           <div class="row"><img src="mentores.png" class="p-13-i"></div>
           <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
@@ -359,7 +358,7 @@
           <div class="row"><p class="p-13-3">Belcorp</p></div>
         </div>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <div class="container c-13-2">
           <div class="row"><img src="mentores.png" class="p-13-i"></div>
           <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
@@ -367,7 +366,7 @@
           <div class="row"><p class="p-13-3">Belcorp</p></div>
         </div>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <div class="container c-13-3">
           <div class="row"><img src="mentores.png" class="p-13-i"></div>
           <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
@@ -375,7 +374,7 @@
           <div class="row"><p class="p-13-3">Belcorp</p></div>
         </div>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <div class="container c-13-4">
           <div class="row"><img src="mentores.png" class="p-13-i"></div>
           <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
@@ -383,7 +382,7 @@
           <div class="row"><p class="p-13-3">Belcorp</p></div>
         </div>
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <div class="container c-13-5">
           <div class="row"><img src="mentores.png" class="p-13-i"></div>
           <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
@@ -405,7 +404,7 @@
     </div>
     <div class="block3">
       <div class="row row-15">
-        <div class="col-5 offset-1">
+        <div class="col-md-5 offset-1">
           <div class="row-15-1">
             <p class="p-15-1">¿Quieres una capacitación<br> personalizada para tu equipo?</p>
           </div>
@@ -413,7 +412,7 @@
             <p class="p-15-2">Contactate con nosotros:</p>
           </div>
           <div class="row-15-3">
-            <div class="col-12">
+            <div class="col-md-12">
               <img src="mail.png" class="p-15-i">
               <span class="p-15-3">hola@enestadobeta.la </span>
               <img src="phone.png" class="p-15-i-2">
@@ -421,7 +420,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-md-6">
           <div class="row text parent">
             <img src="bigphone.png" class="p-15-i-3">
             <img src="logochar.png" class="p-15-i-4">
@@ -430,12 +429,12 @@
       </div>
     </div>
     <div class="row row-16">
-      <div class="col-6 offset-3">
+      <div class="col-md-6 offset-3">
         <div class="row text">
           <p class="p-16-1">Estas empresas ya confiaron en nosotros</p>
         </div>
       </div>
-      <div class="col-6 offset-3">
+      <div class="col-md-6 offset-3">
         <div class="row text">
           <p class="p-16-2">con las mejores capacitaciones en trtansformación digital para sus equipos</p>
         </div>
@@ -446,10 +445,10 @@
     </div>
     <footer class="footer">
       <div class="row row-18">
-        <div class="col-2 text" >
+        <div class="col-md-2 text" >
           <img src="logo.png" class="p-18-i">
         </div>
-        <div class="col-6 offset-4">
+        <div class="col-md-6 offset-4">
           <div class="row text">
             <p class="p-18-1">En Estado Beta. Todos los Derechos Reservados 2020</p>
           </div>
