--- a/home.html
+++ b/home.html
@@ -355,57 +355,47 @@
         </div>
       </div>
       <div class="row row-13">
-        <div class="col-2 offset-1">
-          <div class="container c-13 center">
-            <div class="row"><img src="mentores.png" class="p-13-i"></div>
-            <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
-            <div class="row"><p class="p-13-2">Head of Agile CoE</p></div>
-            <div class="row"><p class="p-13-3">Belcorp</p></div>
+        <div id="carousel" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carousel" data-slide-to="0" class="circle active"> <img src="circulo.png" alt=""> </li>
+            <li data-target="#carousel" data-slide-to="1" class="circle"> <img src="circulo.png" alt=""> </li>
+            <li data-target="#carousel" data-slide-to="2" class="circle"> <img src="circulo.png" alt=""> </li>
+            <li data-target="#carousel" data-slide-to="3" class="circle"> <img src="circulo.png" alt=""> </li>
+            <li data-target="#carousel" data-slide-to="4" class="circle"> <img src="circulo.png" alt=""> </li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item container c-13 center active">
+              <div class="row"><img src="mentores.png" class="p-13-i"></div>
+              <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
+              <div class="row"><p class="p-13-2">Head of Agile CoE</p></div>
+              <div class="row"><p class="p-13-3">Belcorp</p></div>
+            </div>
+            <div class="carousel-item container c-13 center">
+              <div class="row"><img src="mentores.png" class="p-13-i"></div>
+              <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
+              <div class="row"><p class="p-13-2">Head of Agile CoE</p></div>
+              <div class="row"><p class="p-13-3">Belcorp</p></div>
+            </div>
+            <div class="carousel-item container c-13 center">
+              <div class="row"><img src="mentores.png" class="p-13-i"></div>
+              <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
+              <div class="row"><p class="p-13-2">Head of Agile CoE</p></div>
+              <div class="row"><p class="p-13-3">Belcorp</p></div>
+            </div>
+            <div class="carousel-item container c-13 center">
+              <div class="row"><img src="mentores.png" class="p-13-i"></div>
+              <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
+              <div class="row"><p class="p-13-2">Head of Agile CoE</p></div>
+              <div class="row"><p class="p-13-3">Belcorp</p></div>
+            </div>
+            <div class="carousel-item container c-13 center">
+              <div class="row"><img src="mentores.png" class="p-13-i"></div>
+              <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
+              <div class="row"><p class="p-13-2">Head of Agile CoE</p></div>
+              <div class="row"><p class="p-13-3">Belcorp</p></div>
+            </div>
           </div>
         </div>
-        <div class="col-2">
-          <div class="container c-13">
-            <div class="row"><img src="mentores.png" class="p-13-i"></div>
-            <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
-            <div class="row"><p class="p-13-2">Head of Agile CoE</p> </div>
-            <div class="row"><p class="p-13-3">Belcorp</p></div>
-          </div>
-        </div>
-        <div class="col-2">
-          <div class="container c-13">
-            <div class="row"><img src="mentores.png" class="p-13-i"></div>
-            <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
-            <div class="row"><p class="p-13-2">Head of Agile CoE</p> </div>
-            <div class="row"><p class="p-13-3">Belcorp</p></div>
-          </div>
-        </div>
-        <div class="col-2">
-          <div class="container c-13">
-            <div class="row"><img src="mentores.png" class="p-13-i"></div>
-            <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
-            <div class="row"><p class="p-13-2">Head of Agile CoE</p> </div>
-            <div class="row"><p class="p-13-3">Belcorp</p></div>
-          </div>
-        </div>
-        <div class="col-2">
-          <div class="container c-13">
-            <div class="row"><img src="mentores.png" class="p-13-i"></div>
-            <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
-            <div class="row"><p class="p-13-2">Head of Agile CoE</p></div>
-            <div class="row"><p class="p-13-3">Belcorp</p></div>
-          </div>
-        </div>
-      </div>
-      <div class="row row-14">
-        <nav aria-label="Page navigation example" class="pag">
-          <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="#"><img src="circulo.png" width=8> </a></li>
-            <li class="page-item"><a class="page-link" href="#"><img src="circulo.png" width=8> </a></li>
-            <li class="page-item"><a class="page-link" href="#"><img src="circulo.png" width=8> </a></li>
-            <li class="page-item"><a class="page-link" href="#"><img src="circulo.png" width=8> </a></li>
-            <li class="page-item"><a class="page-link" href="#"><img src="circulo.png" width=8> </a></li>
-          </ul>
-        </nav>
       </div>
       <div class="block3">
         <div class="row row-15">
@@ -460,34 +450,6 @@
           </div>
         </div>
       </footer>
-    </div>
-
-    <div id="carousel" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carousel" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel" data-slide-to="1"></li>
-        <li data-target="#carousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item container c-13 center active">
-          <div class="row"><img src="mentores.png" class="p-13-i"></div>
-          <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
-          <div class="row"><p class="p-13-2">Head of Agile CoE</p></div>
-          <div class="row"><p class="p-13-3">Belcorp</p></div>
-        </div>
-        <div class="carousel-item container c-13 center">
-          <div class="row"><img src="mentores.png" class="p-13-i"></div>
-          <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
-          <div class="row"><p class="p-13-2">Head of Agile CoE</p></div>
-          <div class="row"><p class="p-13-3">Belcorp</p></div>
-        </div>
-        <div class="carousel-item container c-13 center">
-          <div class="row"><img src="mentores.png" class="p-13-i"></div>
-          <div class="row"><p class="p-13-1">Abner Ballardo</p></div>
-          <div class="row"><p class="p-13-2">Head of Agile CoE</p></div>
-          <div class="row"><p class="p-13-3">Belcorp</p></div>
-        </div>
-      </div>
     </div>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
